@@ -23,7 +23,14 @@ split.default <- function(x, f, drop = FALSE, sep = ".", ...)
     if(!missing(...)) .NotYetUsed(deparse(...), error = FALSE)
 
     if (is.list(f)) f <- interaction(f, drop = drop, sep = sep)
-    else if (!is.factor(f)) f <- as.factor(f) # docs say as.factor
+    else if (is.integer(f)) {
+        ## optimization of as.factor for this case
+        ff <- unique.default(f)
+        levels <- sort(ff)
+        f <- match(f, levels)
+        levels(f) <- as.character(levels)
+        class(f) <- "factor"
+    } else if (!is.factor(f)) f <- as.factor(f) # docs say as.factor
     else if (drop) f <- factor(f) # drop extraneous levels
     storage.mode(f) <- "integer"  # some factors have had double in the past
     if (is.null(attr(x, "class")))
